2004-06-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: changed Interfaces diagram, so namespaces
	work properly.
	TODO: should write integrety checks for the data model (check if
	derived unions are propertly subsetted everywhere, typos, etc.)

2004-06-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/namespace.py: Added DND for elements within the tree view.

2004-06-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: added hollow diamond end for shared
	* gaphor/diagram/itemactions.py: Added MoveUp action (for attributes
	and operations)
	* gaphor/UML/collection.py: added method moveUp().
	* gaphor/diagram/(attribute|operation).py: added MoveUp action to
	popup menu.

2004-05-27  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	Applied patches from wrobell@pld-linux.org
	* gaphor/misc/odict.py: new file. Ordered dictionary
	* gaphor/diagram/component.py, data/pixmaps/component24.png: new
	item: Component.
	* several small changes in itemactions, actions.py and mainwindow.py.

2004-05-27  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	RELEASE 0.4.0

        * gaphor/storage.py: Be more verbose wrt load status.
	* gaphor/UML/elementfactory.py: Added method size().
	* gaphor/UML/uml2.gaphor: change in Interfaces diagram
	* gaphor/ui/mainactions.py: made load/save
	window look prettier.

2004-05-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/icons.xml: contains descriptions of icons, rather than
	hardcoding them in gaphor/ui/stock.py.
	* setup.py, MANIFEST.in: added icons.xml
	* gaphor/ui/stock.py: use icons.xml. Added an XML parser.
	* gaphor/ui/mainwindow.py, mainactions.py: added About dialog.
	* gaphor/diagram/interface.py: make it work
	* gaphor/diagram/actions.py: added placement tool and action for
	interfaces (creates both an interface and an Implementation
	dependency.
	* data/pixmaps/interface24.png: added icon for Interface.

2004-05-25  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
